drodown overlap fix; white-space no wrap for mobile navbar; removed thinsp from cards;

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -8,10 +8,12 @@
     justify-content: space-between;
 
     .logo {
+      white-space: nowrap;
       a {
         margin-left: 1rem;
         display: flex;
         text-decoration: none;
+        align-items: center;
         position: relative;
         color: #000;
 
@@ -110,6 +112,7 @@
             position: absolute;
             top: 0;
             left: 0;
+            z-index: 99;
 
             margin-top: 2rem;
             li {
@@ -183,6 +186,8 @@
     .dropdown-content {
       display: block;
       margin: 0.5rem 0 0 0;
+
+      white-space: nowrap;
     }
   }
 
